<?xml version="1.0"?>
<package format="2">
  <name>rosbag2_storage_leveldb_plugin</name>
  <version>0.1.0</version>
  <description>ROSBag2 LevelDB storage plugin</description>
  <maintainer email="barry.xu@sony.com">Barry Xu</maintainer>
  <maintainer email="tomoya.fujita@sony.com">Tomoya Fujita</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>rcpputils</depend>
  <depend>rcutils</depend>
  <depend>rosbag2_storage</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>leveldb_vendor</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>rosbag2_test_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
